--- a/services/src/main/resources/config/configuration-poc.properties
+++ b/services/src/main/resources/config/configuration-poc.properties
@@ -1,5 +1,6 @@
 # Fuer ProofOfConcept. Nur Autobahnen, Flüsse und Brücken. Das dann aufgefüllt mit Landschaft.
 # Auch für newgen.
+# modules (26.3.24 deprecated here,moved to application.properties)
 
 modules.TunnelModule.enabled=false
 modules.BuildingModule.enabled=false
